--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "googleapis": "^127.0.0",
+    "twilio": "^4.18.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0",
