--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
     "googleapis": "^127.0.0",
+    "mysql": "^2.18.1",
     "twilio": "^4.18.1"
   },
   "devDependencies": {
