--- a/functions/package.json
+++ b/functions/package.json
@@ -17,13 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.5.0",
+    "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.2.0",
     "googleapis": "^127.0.0",
     "mysql": "^2.18.1",
-    "twilio": "^4.18.1"
+    "twilio": "^4.18.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.6",
     "firebase-functions-test": "^3.0.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
